--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -4,3 +4,11 @@ layout: default
 <a href="/">Back</a>
 
 {{ content }}
+
+<h2>Video</h2>
+
+Here is live recording of how bot tired to guess the word:
+
+<div class="ratio ratio-16x9">
+    <iframe src="{{ page.video_link | replace: "youtu.be/", "youtube.com/embed/"}}/embed/AOInQvzQS2g?sub_confirmation=1"></iframe>
+</div>
