fixed displaying last 10 solutions

--- a/_includes/solutions.html
+++ b/_includes/solutions.html
@@ -1,7 +1,7 @@
 Also you can refer to solutions of previous days:
 
 {% assign solutions = site.solutions | sort: 'date' | reverse %}
-{% for solution in solutions limit 10 %}
+{% for solution in solutions limit: 10 %}
 <a href="{{ solution.url }}">{{ solution.title }}</a> - {% if solution.solved == true %}solved with <strong>{{ solution.attempts}}</strong> guesses{% else %}<strong>failed to solve</strong>{% endif %}. <a href="{{ solution.video_link }}">Video</a>
 {% endfor %}
 
