--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -14,7 +14,7 @@
 
 <!-- You can set your favicon here -->
 <!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
-<script src="https://apis.google.com/js/platform.js"></script>
+<script async src="https://apis.google.com/js/platform.js"></script>
 <style>
     .ratio {
   position: relative;
