added twitter icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
         <a href="https://www.youtube.com/channel/UCHExvm1R3a7NFk5K89jUg7Q" class="fa fa-youtube" target="_blank"></a>
         <a href="feed.atom" class="fa fa-feed" target="_blank"></a>
         <a href="mailto:sergey.trasko@gmail.com?subject=Inquiry about 'Bot Plays Wordle'" class="fa fa-envelope" target="_blank"></a>
+        <a href="https://twitter.com/botplayswordle" class="fa fa-twitter" target="_blank"></a>
       </footer>
     </div>
   </body>
