--- a/_includes/statistics.html
+++ b/_includes/statistics.html
@@ -68,3 +68,40 @@ Win rate: <strong>{{ count | minus: unsolved | times: 100.0 | divided_by: count 
 Current winning streak: <strong>{{ winningStreak }}</strong>
 
 Longest winning streak: <strong>{{ maxStreak }}</strong>
+
+Solutions over time:
+{% assign x = 20 %}
+{% assign dx = 460 | divided_by: count %}
+{% assign sols = site.solutions | sort: 'date' %}
+<svg viewbox="0 0 500 200">
+    <line x1="20" y1="40" x2="480" y2="40" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
+    <line x1="20" y1="60" x2="480" y2="60" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
+    <line x1="20" y1="80" x2="480" y2="80" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
+    <line x1="20" y1="100" x2="480" y2="100" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
+    <line x1="20" y1="120" x2="480" y2="120" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
+    <line x1="20" y1="140" x2="480" y2="140" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
+    <text x="0" y="40">6</text>
+    <text x="0" y="60">5</text>
+    <text x="0" y="80">4</text>
+    <text x="0" y="100">3</text>
+    <text x="0" y="120">2</text>
+    <text x="0" y="140">1</text>
+    <polyline fill="none" stroke="#f5793a" stroke-width="2" stroke-linecap="round" points="
+    {% for solution in sols %}
+        {% assign y = solution.attempts | times: -20 | plus: 160 %}
+        {{ x }},{{ y }}
+        {% assign x = x | plus: dx %}
+    {% endfor %}
+    " />
+    {% assign x = 20 %}
+    {% assign prevGroup = sols[0].date | date: "%V" %}
+    {% for solution in sols %}
+        {% assign group = solution.date | date: "%V" %}
+        {% if prevGroup != group %}
+        <line x1="{{ x }}" y1="2" x2="{{ x }}" y2="140" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
+        <text transform="translate({{ x }}, 150) rotate(90)">{{ solution.date | date: "%e %b" }}</text>
+        {% endif %}
+        {% assign prevGroup = group %}
+        {% assign x = x | plus: dx %}
+    {% endfor %}
+</svg>
