favico, link to video, stats improvements

--- a/_includes/statistics.html
+++ b/_includes/statistics.html
@@ -75,6 +75,11 @@ Solutions over time:
 {% assign dx = 410.0 | divided_by: count %}
 {% assign sols = site.solutions | sort: 'date' %}
 <svg viewbox="0 0 500 430">
+    <rect x="20" y="30" width="460" height="45" fill="#f5793a" fill-opacity="0.25"/>
+    <rect x="20" y="75" width="460" height="100" fill="#86888a" fill-opacity="0.25"/>
+    <rect x="20" y="175" width="460" height="100" fill="#c9b458" fill-opacity="0.25"/>
+    <rect x="20" y="275" width="460" height="80" fill="#6aaa64" fill-opacity="0.25"/>
+
     <line x1="20" y1="100" x2="480" y2="100" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
     <line x1="20" y1="150" x2="480" y2="150" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
     <line x1="20" y1="200" x2="480" y2="200" stroke="#86888a" stroke-width="1" stroke-dasharray="4"/>
