--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -36,3 +36,6 @@ Here is live recording of how bot tired to guess the word:
 <div class="ratio ratio-16x9">
     <iframe src="{{ page.video_link | replace: "youtu.be/", "youtube.com/embed/"}}/embed/AOInQvzQS2g?sub_confirmation=1"></iframe>
 </div>
+
+<br />
+Link to video - <a href="{{ page.video_link }}">{{ page.title }}</a>
