--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,4 +1,6 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
+<link rel="icon" type="image/svg+xml" href="/logo.svg">
+<link rel="alternate" type="application/rss+xml" title="Bot Solves Wordle" href="/feed.atom" />
 
 <!-- Setup Google Analytics -->
 <!-- {% include head-custom-google-analytics.html %} -->
