--- a/_layouts/solution.html
+++ b/_layouts/solution.html
@@ -38,4 +38,4 @@ Here is live recording of how bot tired to guess the word:
 </div>
 
 <br />
-Link to video - <a href="{{ page.video_link }}">{{ page.title }}</a>
+Link to video - <a href="{{ page.video_link }}">{{ page.title | replace: "\", "" }}</a>
