--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,12 +43,15 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">&copy; botplayswordle.com</p>
+        {% assign inceptionYear = "2022" %}
+        {% assign currentYear = "now" | date: "%Y" %}
+        <p class="copyright">&copy; botplayswordle.com {{ inceptionYear }}{% if currentYear != inceptionYear %}-{{ currentYear }}{% endif %}</p>
+        <a href="mailto:sergey.trasko@gmail.com?subject=Inquiry about 'Bot Plays Wordle'" class="fa fa-envelope" target="_blank"></a>
+        <a href="https://www.linkedin.com/in/sergey-trasko-3a82112b/" class="fa fa-linkedin" target="_blank"></a>
         <a href="https://github.com/bot-plays-wordle" class="fa fa-github" target="_blank"></a>
         <a href="https://www.youtube.com/@botplayswordle" class="fa fa-youtube" target="_blank"></a>
-        <a href="/feed.atom" class="fa fa-feed" target="_blank"></a>
-        <a href="mailto:sergey.trasko@gmail.com?subject=Inquiry about 'Bot Plays Wordle'" class="fa fa-envelope" target="_blank"></a>
         <a href="https://twitter.com/botplayswordle" class="fa fa-twitter" target="_blank"></a>
+        <a href="/feed.atom" class="fa fa-feed" target="_blank"></a>
       </footer>
     </div>
   </body>
